# tn_base

./: .gitignore  CMakeLists.txt  CMakeSettings.json  PreLoad.cmake  README.md  vcpkg-cmake-wrapper.cmake
example/: CMakeLists.txt  tn_base_example_01.cpp
src/: CMakeLists.txt  tn_base.cpp
src/include/: tn_algorithm.h  tn_base.h  tn_text.h
